kubernetes/base/istio-gateway/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: digital-bank-gateway
  namespace: digital-bank
spec:
  selector:
    istio: ingressgateway # Use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "digital-bank.example.com"
    - "*"  # Also allow access without host name matching for local testing
